--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
-                        <p>As a full-stack developer, I'm now engaged in various mobile app projects. Looking for a position that will allow me to grow professionally and contribute to the expansion of the company</p>
+                        <p>As a full-stack developer, I'm now engaged in various mobile app projects. Looking for a position that will allow me to grow professionally and contribute to the expansion of the company.</p>
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                             <p class="tab-links" onclick="opentab('education')">Education</p>
