--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </nav>
                 <div class="header-text">
                     <p>Full Stack Developer</p>
-                    <h1>Hi, I'm <span>Dhanush</span> <br>From India</h1>
+                    <h1><b>Hi, I'm <span>Dhanush</span> <br>From India</b></h1>
                 </div>
             </div>
 
