--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <img src="images/work-3.png">
                 <div class="layer">
                     <h2>Air Quality Monitor</h2></br>
-                    <p>It is a Device, which monitor the atmosphere air quality and Provide tha data. And it gives alert when the air quality down.</p>
+                    <p>It is a Device, which monitor the atmosphere air quality and Provide the data. And it gives alert when the air quality down.</p>
                     <a href="https://github.com/dhanush-r0119/"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
