--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             
             </div>
             
-                <a href="images/Resume.pdf" download class="btn btn2">Download Resume</a>
+                <a href="https://docs.google.com/document/d/17bqfGpk2AmdWuWGscs9dqHRoYYD5rNpZ5XUKPq0LYGI/edit?usp=sharing" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
