--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="'UTF-8">
         <meta http-equiv="X_UA_Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Personal Portfolio Website</title>
+        <title>Dhanush Portfolio</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/9e2a49de7b.js" crossorigin="anonymous"></script>
     </head>
