--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                   <a href="https://github.com/dhanush-r0119"> <i class="fa-brands fa-github"></i></a>
                   <a href="https://www.linkedin.com/in/dhanushr2004/"> <i class="fa-brands fa-linkedin"></i></a>
                   <a href="https://leetcode.com/21eca18/"> <i class="fa-solid fa-laptop-code"></i></a>
+                  <a href="https://www.instagram.com/dhanush0119/"><i class="fa-brands fa-instagram"></i></a>
                   
             
             </div>
