--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="layer">
                     <h2>Unified Rescue Agency Coordination using Machine Learning Model</h2><br></br>
                     <p>Led an innovative technology program utilizing machine learning for data collection, dynamic recommendations to government authorities, enhanced communication, and documented rescue operations.</p>
-                    <a href="https://github.com/dhanush-r0119/"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/dhanush-r0119?tab=repositories"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <!-- <div class="work">
@@ -204,7 +204,7 @@
                 <div class="layer">
                     <h2>Find My Doctor</h2></br>
                     <p>It is a mobile app, It helps to book a appointment to the hospital we want to choose or nearby hospital </p>
-                    <a href="https://github.com/dhanush-r0119/"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <a href="https://github.com/dhanush-r0119?tab=repositories"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div> -->
             <div class="work">
