--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="row">
             <div class="contact-left">
                 <h1>Contact Me</h1>
-            <p><i class="fa-sharp fa-solid fa-envelope"></i> dhanushrenugopal@gmail.com</p>
+            <p><i class="fa-sharp fa-solid fa-envelope"></i> dhanurenu0119@gmail.com</p>
             <p><i class="fa-solid fa-square-phone"></i> +91 7010922869</p>
             <div class="social-icons">
                   <a href="https://github.com/dhanush-r0119"> <i class="fa-brands fa-github"></i></a>
