--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/user.png">
+                        <img src="images/user1.png">
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
@@ -358,3 +358,4 @@ var sidemeu=document.getElementById("sidemenu");
   </script>
     </body>
 </html>
+
